--- a/VUIComponents/Classes/Components/ButtomSheetView/BottomSheetView.xib
+++ b/VUIComponents/Classes/Components/ButtomSheetView/BottomSheetView.xib
@@ -45,7 +45,7 @@
                                                 <constraint firstAttribute="height" constant="1" id="9VW-nH-fX1"/>
                                             </constraints>
                                         </view>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe down to skip" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WQC-lq-kSn" customClass="AnaVodafoneLabel">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe down to skip" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WQC-lq-kSn" customClass="AnaVodafoneLabel">
                                             <rect key="frame" x="20" y="4" width="335" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
